* Thu Jul 31 2003 Matt Domsch <Matt_Domsch@dell.com>
- Applied patch from Dann Frazier to enable creating netboot entries.
- update AUTHORS with Dann's netboot contribution.
- Until we can get the ACPI HID and UID programatically, make the user
  pass them in when creating a netboot entry.
- Add O_DIRECT support for reading the disk.
- Fix unparse_hardware_path() for the PCI case - the device and function
  values were printed in reverse order.
- Fix the README file to reflect all the options that can be passed, and
  add a new item for netboot entries.
- whitespace cleanups

* Fri Oct 25 2002 Matt Domsch <Matt_Domsch@dell.com>
- trivial patch from Fabien Lebaillif - Delamare <fabien@quadric.com>
  increases the length of the boot option description from 40 to 64 bytes.

* Tue Oct 22 2002 Matt Domsch <Matt_Domsch@dell.com>
- ran docbook2man on the man page Dann Frazier created
- Added man page to spec file
- Added patches from Dann Frazier
  - Removes the requirement to be root to run efibootmgr.  This lets
    mortal users run efibootmgr to check the version, and see the
    --help output. It should also allow efibootmgr to work under
    security systems without the strict root/non-root dichotomy.
    - Checks to see if a boot option was specified when a boot option
    deletion was requested.
- Released version 0.4.1

* Sun Jul 21 2002 Matt Domsch <Matt_Domsch@dell.com>
- Added kernel_has_blkgetsize64() test, now uses BLKGETSIZE64 if on a
  known-good kernel.  This is important when the Large Block Device (64-bit
  block address) patch gets merged into the 2.5 kernel.

* Wed May 1 2002 Matt Domsch <Matt_Domsch@dell.com>
- Released version 0.4.0

* Tue Apr 30 2002 Matt Domsch <Matt_Domsch@dell.com>
- Added some printfs to compare_gpts().

* Mon Apr 08 2002 Matt Domsch <Matt_Domsch@dell.com>
- Make sure partition number arg is in the GPT disk.
- Added a few more _FILE_OFFSET_BITS defines where needed

* Fri Apr 05 2002 Matt Domsch <Matt_Domsch@dell.com>